--- a/src/molecule_plugins/gce/playbooks/tasks/create_linux_instance.yml
+++ b/src/molecule_plugins/gce/playbooks/tasks/create_linux_instance.yml
@@ -56,11 +56,9 @@
     - "Dump instance config"
 
 - name: Wait for SSH
-  ansible.builtin.wait_for:
-    port: 22
-    host: "{{ item.networkInterfaces.0.accessConfigs.0.natIP if molecule_yml.driver.external_access else item.networkInterfaces.0.networkIP }}"
-    search_regex: SSH
+  ansible.builtin.wait_for_connection:
     delay: 10
+    timeout: 300
   loop: "{{ server.results }}"
   register: waitfor
   until: waitfor.failed == false
